# raylib-template

./: .gitignore  .gitmodules  CMakeLists.txt  run.sh
src/: main.c  main.cpp
